[tool.poetry]
name = "sql-generator"
version = "0.1.0"
description = ""
authors = ["Blake Enyart <blake@mashey.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
